app-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogging-app-deployment
spec:
  selector:
    matchLabels:
      app: blogging-app
  replicas: 2
  template:
    metadata:
      labels:
        app: blogging-app
    spec:
      containers:
        - name: blogging-app
          image: waldara/bloggingapp:v1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
