app-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogging-app-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec:
  selector:
    app: blogging-app
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080 
  type: NodePort
